// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBar renders correctly when no name or description 1`] = `
<div>
  <section
    class="section"
  >
    <div
      class="titleDescription"
    >
      <div
        class="jsx-1141087211 title"
        data-test="dashboard-title-input"
      >
        <label
          class="jsx-2718078600 "
          data-test="dashboard-title-input-label"
          for="Dashboard title input"
        >
          <span
            class="jsx-2718078600"
          >
            Dashboard title
          </span>
        </label>
        <div
          class="jsx-3111771310 "
          data-test="dashboard-title-input-content"
        >
          <div
            class="jsx-1220078726 "
            data-test="dhis2-uicore-box"
          >
            <div
              class="jsx-3353877153 jsx-1090541828 input"
              data-test="dhis2-uicore-input"
            >
              <input
                class="jsx-3353877153 jsx-1090541828 "
                id="Dashboard title input"
                name="Dashboard title input"
                placeholder="Untitled dashboard"
                type="text"
                value=""
              />
              <div
                class="jsx-3353877153 jsx-1090541828 status-icon"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="jsx-1141087211 description"
        data-test="dashboard-description-input"
      >
        <label
          class="jsx-2718078600 "
          data-test="dashboard-description-input-label"
          for="Dashboard description input"
        >
          <span
            class="jsx-2718078600"
          >
            Dashboard description
          </span>
        </label>
        <div
          class="jsx-3111771310 "
          data-test="dashboard-description-input-content"
        >
          <div
            class="jsx-2954617683 "
            data-test="dhis2-uicore-box"
          >
            <div
              class="jsx-829628532 jsx-2961587785 textarea"
              data-test="dhis2-uicore-textarea"
            >
              <textarea
                class="jsx-829628532 jsx-2961587785 "
                id="Dashboard description input"
                name="Dashboard description input"
                rows="4"
              />
              <div
                class="jsx-829628532 jsx-2961587785 status-icon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="itemSelector"
    >
      <div
        class="item-selector"
      />
    </div>
  </section>
</div>
`;

exports[`TitleBar renders correctly with name and description 1`] = `
<div>
  <section
    class="section"
  >
    <div
      class="titleDescription"
    >
      <div
        class="jsx-1141087211 title"
        data-test="dashboard-title-input"
      >
        <label
          class="jsx-2718078600 "
          data-test="dashboard-title-input-label"
          for="Dashboard title input"
        >
          <span
            class="jsx-2718078600"
          >
            Dashboard title
          </span>
        </label>
        <div
          class="jsx-3111771310 "
          data-test="dashboard-title-input-content"
        >
          <div
            class="jsx-1220078726 "
            data-test="dhis2-uicore-box"
          >
            <div
              class="jsx-3353877153 jsx-1090541828 input"
              data-test="dhis2-uicore-input"
            >
              <input
                class="jsx-3353877153 jsx-1090541828 "
                id="Dashboard title input"
                name="Dashboard title input"
                placeholder="Untitled dashboard"
                type="text"
                value="Rainbow Dash"
              />
              <div
                class="jsx-3353877153 jsx-1090541828 status-icon"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="jsx-1141087211 description"
        data-test="dashboard-description-input"
      >
        <label
          class="jsx-2718078600 "
          data-test="dashboard-description-input-label"
          for="Dashboard description input"
        >
          <span
            class="jsx-2718078600"
          >
            Dashboard description
          </span>
        </label>
        <div
          class="jsx-3111771310 "
          data-test="dashboard-description-input-content"
        >
          <div
            class="jsx-2954617683 "
            data-test="dhis2-uicore-box"
          >
            <div
              class="jsx-829628532 jsx-2961587785 textarea"
              data-test="dhis2-uicore-textarea"
            >
              <textarea
                class="jsx-829628532 jsx-2961587785 "
                id="Dashboard description input"
                name="Dashboard description input"
                rows="4"
              >
                A very colorful pony
              </textarea>
              <div
                class="jsx-829628532 jsx-2961587785 status-icon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="itemSelector"
    >
      <div
        class="item-selector"
      />
    </div>
  </section>
</div>
`;
